tests/fixtures/pass/collections/list_slicing_vm_semantics.walrus
println([0, 1, 2, 3][1..2]);
println([0, 1, 2, 3][0..3]);
