tests/fixtures/fail/collections/index_out_of_bounds.walrus
println([1, 2][10]);
